# masters-thesis-program

./: .gitignore  Cargo.toml  benchmark.py  build.rs  justfile  plot.py  readme.md  spatial_benchmark.py
levels/: 1-Empty.level  2-Labyrinth.level  3-Cathedral.level  4-Centipedetown.level  Cathedral.level  a.level  small.level  unnamed.level
src/: framepace.rs  level.rs  main.rs  mouse_follow.rs  statistics.rs  utils.rs  visualization.rs
src/editor/: mod.rs
src/simulation/: collision.rs  flocking.rs  level.rs  local_avoidance.rs  mod.rs  movement.rs  navigation.rs  navigation2.rs  rng.rs  spawning.rs
src/simulation/flocking/: array.rs  array_check.rs  hash.rs  kdbush.rs  kdtree.rs  kdtree_kiddo.rs  quadtree.rs  rstar.rs
