[package]
name = "masters-thesis-program"
version = "0.1.0"
edition = "2021"

[features]
bench = []

[profile.dev]
debug = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
incremental = true

[dependencies]
bevy = "0.12.1"
bevy_rapier2d = { git = "https://github.com/eero-lehtinen/bevy_rapier", branch = "update1", features = [
	"debug-render-2d",
	"serde-serialize",
] }
futures-lite = "2.2.0"
ndarray = "0.15.6"
geo-types = "0.4"
offset-polygon = "0.1.0"
itertools = "0.12.0"
bevy_pancam = "0.10.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
earcutr = "0.4.3"
anyhow = "1.0.79"
spin_sleep = "1.2.0"
